# PIDSE

./: .gitignore  LICENSE  README.md  pyproject.toml  simple_pidse_test.py  test_robust_pidse.py
examples/: kitti_example.py  quadrotor_example.py  quick_start.py
experiments/: train_pidse.py
experiments/configs/: default_config.yaml
pidse/: __init__.py
pidse/core/: __init__.py  pidse.py  state_space.py
pidse/data/: __init__.py  datasets.py  loaders.py  preprocessing.py
pidse/filters/: __init__.py  differentiable_ekf.py
pidse/losses/: __init__.py  hybrid_loss.py
pidse/models/: __init__.py  pinn.py
pidse/utils/: __init__.py  config.py  metrics.py  visualization.py
scripts/: download_data.sh  download_kitti.sh
tests/: test_pidse.py
